name:                hmdx
version:             0.0.1.0
synopsis:            Embedded language for Haskell to generate MDX queries
description:         Please see README.md
homepage:            http://github.com/sfilipov/hmdx#readme
license:             MIT
license-file:        LICENSE
author:              Simeon Filipov
maintainer:          ssfilipov@gmail.com
-- copyright:
category:            Database
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Database.HMDX.Constructor
                     , Database.HMDX.Deconstructor
                     , Database.HMDX.Info
                     , Database.HMDX.SSAS
  ghc-options:         -Wall -fwarn-tabs
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , basic-prelude
                     , soap
                     , text
                     , xml-conduit
                     , xml-conduit-writer
                     , template-haskell
                     , http-client
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
                       NoImplicitPrelude

executable hmdx-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -fwarn-tabs
  build-depends:       hmdx
                     , base
                     , containers
                     , basic-prelude
                     , soap
                     , xml-conduit-writer
                     , xml-conduit
                     , text
                     , template-haskell
                     , http-client
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
                       NoImplicitPrelude

test-suite hmdx-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       hmdx
                     , base
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -fwarn-tabs
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
                       NoImplicitPrelude

source-repository head
  type:     git
  location: https://github.com/sfilipov/hmdx
