name:                olap
version:             0.0.1.0
synopsis:            Tools to communicate with OLAP databases using XMLA
description:         Please see README.md
homepage:            http://github.com/sfilipov/olap#readme
license:             MIT
license-file:        LICENSE
author:              Simeon Filipov
maintainer:          ssfilipov@gmail.com
-- copyright:
category:            Database
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Database.OLAP
  build-depends:       base >= 4.7 && < 5
                     , soap
  default-language:    Haskell2010

executable olap-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , olap
                     , soap
                     , xml-conduit-writer
                     , xml-conduit
                     , text
                     , http-client
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings

test-suite olap-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , olap
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/sfilipov/olap
