name:                olap
version:             0.0.1.0
synopsis:            Tools to communicate with OLAP databases using XMLA
description:         Please see README.md
homepage:            http://github.com/sfilipov/olap#readme
license:             MIT
license-file:        LICENSE
author:              Simeon Filipov
maintainer:          ssfilipov@gmail.com
-- copyright:
category:            Database
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Database.HMDX.Info
                     , Database.HMDX.SSAS
  ghc-options:         -Wall -fwarn-tabs
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , basic-prelude
                     , soap
                     , text
                     , xml-conduit
                     , xml-conduit-writer
                     , template-haskell
                     , http-client
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
                       NoImplicitPrelude

executable olap-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -fwarn-tabs
  build-depends:       base
                     , containers
                     , basic-prelude
                     , olap
                     , soap
                     , xml-conduit-writer
                     , xml-conduit
                     , text
                     , http-client
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
                       NoImplicitPrelude

test-suite olap-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , olap
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -fwarn-tabs
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
                       NoImplicitPrelude

source-repository head
  type:     git
  location: https://github.com/sfilipov/olap
